# rust-binance

./: Cargo.toml  README.md  trading_log.txt
btrap-quant/: Cargo.toml
btrap-quant/src/: main.rs  order.rs
src/: depth_price.rs  execute_trade.rs  handle_price.rs  main.rs  order.rs  types.rs
