[package]
name = "btrap-quant"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.17", features = ["native-tls"] }
futures = "0.3"
futures-util = "0.3"
serde_json = "1.0"
chrono = "0.4"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
egui = "0.22"
egui_extras = "0.22"
eframe = { version = "0.22.0", features = ["persistence"] }
winapi = { version = "0.3.9", features = ["winuser", "windef"] }